--- a/08.1.html
+++ b/08.1.html
@@ -8,7 +8,7 @@
 <body>
 <div class="container">
     <div class="gallery">
-        <div class="img_left"><a href="shmel1.jpg"><img src="shmel11.jpg"></a>
+        <div class="img_left"><a href="shmel1.jpg"><img alt="xxx" src="shmel11.jpg"></a>
             <div class="img_content_left">
                 <h2 class="text">Как принять решение</h2>
                 <span class="text"><p>Как шмель определяет наличие нектара в цветке?</p></span>
