--- a/08.1.html
+++ b/08.1.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>Bumblebee1</title>
     <link rel="stylesheet" type="text/css" href="css/08.1.css">
+    <style>
+        img[src^="shmel"]{border: solid 5px red;}
+    </style>
 </head>
 <body>
 <div class="container">
@@ -11,7 +14,7 @@
         <div class="img_left"><a href="shmel1.jpg"><img alt="xxx" src="shmel11.jpg"></a>
             <div class="img_content_left">
                 <h2 class="text">Как принять решение</h2>
-                <span class="text"><p>Как шмель определяет наличие нектара в цветке?</p></span>
+                <p class="text"><span>Как шмель определяет наличие нектара в цветке?</span></p>
             </div>
         </div>
         <div class="img_center"><a href="sirenevui1.jpg"><img src="sirenevui11.jpg"></a>
