--- a/raznoe.html
+++ b/raznoe.html
@@ -19,10 +19,26 @@
 		.pnlTitul{position: absolute; top: 30px; left: 10px; width: 75%}
 		.zagolovok{font-size: 2em; color: lightgray; text-decoration: none;}
 		.lid{font-size: .5em; color: white;}
+		tr:nth-child(odd){background: lightgray;}
+		tr:nth-child(even){background: palegreen;}
 	</style>
 </head>
 <body>
 	<p>kjhgkuh gurg ;eruhg <span class="vydelenie1">gjhg uyiuyiu</span>kehgk ehglkehgkehgkehguehguh</p>
+	<table>
+		<tr>
+			<td>hg</td>
+			<td>hg</td>
+		</tr>
+		<tr>
+			<td>hg</td>
+			<td>hg</td>
+		</tr>
+		<tr>
+			<td>hg</td>
+			<td>hg</td>
+		</tr>
+	</table>
 	<div class="pnlWall">
 		<div class="pnlBase">1</div>
 		<div class="pnlBase pnlZhyrny">2</div>
