--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
    <a href="01.html">01.html</a>
    <a href="02.html">02.html</a>
    <a href="03.html">03.html</a>
+   <a href="07.html">07.html</a>
    <a href="08.html">08.html</a>
    <a href="08.1.html">08.1.html</a>
    <a href="08.2.html">08.2.html</a>
+   <a href="09.html">09.html</a>
 </body>
 </html>
