--- a/00.html
+++ b/00.html
@@ -19,12 +19,12 @@
      <div class="col-md-2">Стать бжж</div>
     </div> 
      <div class="row">
-     	<div class="col-md-3"><img class="img" src="beefoto.jpg"> </div>
+     	<div class="col-md-3"><img class="img" src="img/beefoto.jpg"> </div>
      	<div class="col-md-6"><p>Шмели (триба Bombini) это одна из четырёх групп пчёл с «корзиночками» (пыльцевыми корзинами 
      	на задних ногах, окружёнными жёсткими прямыми волосками) в составе семейства Apidae, вместе с 
         Apini (медоносные пчёлы), Euglossini (орхидные пчёлы) и Meliponini (безжальные пчёлы), которые 
         являются монофилетической группой.
-        <img class="img_text" src="gruz01.jpg"> 
+        <img class="img_text" src="img/gruz01.jpg">
         <br>Продвинутое эусоциальное поведение, предположительно, 
         эволюционировало дважды в группе. В настоящее время считается, что медоносные пчёлы (Apini с 
         продвинутым социальным устройством колоний) и орхидные пчёлы (Euglossini) эволюционно тесно 
