--- a/03.html
+++ b/03.html
@@ -67,7 +67,7 @@
  	<h1>Новогодний гном</h1>
  	<p><b> Говорят, что вера в фольклорных персонажей наделенных магическими или сверхестестьвенными 
  	способностями, примдает сил и уверености в себе. А потому предлагаю сотворить немного волшебства самим.</b></p> 
-	<p class="style"><img class="style" src="11gnom.jpg">С гномами мы знакомы с детства из книг и мультфильмов. Их невероятное множество, с разными 
+	<p class="style"><img class="style" src="img/11gnom.jpg">С гномами мы знакомы с детства из книг и мультфильмов. Их невероятное множество, с разными
     колпачками, бородами, в разных одеждах и невообразимых башмачках.
     Способов изготовления, как и материалов, из которых можно сделать гнома множество.
     <br>Нам потребуется фетр,искусственный мех, наполнитель, нитки цветные, пара бусинок, 
@@ -80,7 +80,7 @@
     тем самым придав оригинальность и индивидуальность гному.
     <br>С мехом для бороды работать сложно, но есть хитрости, которые облегчат работу. Варежки и сапожки
     или туфельки можно сделать съемными, но на это у вас уйдет еще как минимум пара часов работы и
-    будет считаться высшим пилотажем!</p><img class="style1" src="22gnom.jpg">
+    будет считаться высшим пилотажем!</p><img class="style1" src="img/22gnom.jpg">
     <p>Давайте разберёмся, какой же материал нам потребуется для работы. На первом месте это любая ткань, 
     даже трикотажная. Вот только при шитье этому виду ткани необходимо уделить должное внимание. Поэтому советую 
     обходить этот материал стороной. Так вторым на очереди будет фетр, вот он то как раз очень прост в использовании. 
