--- a/08.1.html
+++ b/08.1.html
@@ -11,13 +11,13 @@
 <body>
 <div class="container">
     <div class="gallery">
-        <div class="img_left"><a href="shmel1.jpg"><img alt="xxx" src="shmel11.jpg"></a>
+        <div class="img_left"><a href="img/shmel1.jpg"><img alt="xxx" src="img/shmel11.jpg"></a>
             <div class="img_content_left">
                 <h2 class="text">Как принять решение</h2>
                 <p class="text"><span>Как шмель определяет наличие нектара в цветке?</span></p>
             </div>
         </div>
-        <div class="img_center"><a href="sirenevui1.jpg"><img src="sirenevui11.jpg"></a>
+        <div class="img_center"><a href="img/sirenevui1.jpg"><img src="img/sirenevui11.jpg"></a>
             <div class="img_content_center">
                 <h2 class="text">Он рыжий</h2>
                 <span class="text">Бывают ли рыжие шмели?</span>
@@ -25,7 +25,7 @@
         </div>
         <div class="img_r">
             <!-- <div class="img_right"><a href="shmel6.jpg"><img src="shmel620.jpg"></a></div> -->
-            <div class="img_right0"><a href="shmel3.jpg"><img src="shmel33.jpg"></a></div>
+            <div class="img_right0"><a href="img/shmel3.jpg"><img src="img/shmel33.jpg"></a></div>
             <div class="img_content_right">
                 <h2 class="text">Форма и доступность</h2>
                 <span class="text">Как влияет форма цветка на доступность нектара?</span>
@@ -33,19 +33,19 @@
         </div>
     </div>
     <div class="gallery1">
-        <div class="img_left1"><a href="shmel22.jpg"><img src="shmel22.jpg"></a>
+        <div class="img_left1"><a href="img/shmel22.jpg"><img src="img/shmel22.jpg"></a>
             <div class="img_content_left1">
                 <h2 class="text">Кусь или не кусь?</h2>
                 <span class="text">Если укусил шмель...</span>
             </div>
         </div>
-        <div class="img_center1"><a href="shmel4.jpg"><img src="shmel41.jpg"></a>
+        <div class="img_center1"><a href="img/shmel4.jpg"><img src="img/shmel41.jpg"></a>
             <div class="img_content_center1">
                 <h2 class="text">Опыление</h2>
                 <span class="text">Роль шмелей в опылении</span>
             </div>
         </div>
-        <div class="img_right1"><a href="gruz.jpg"><img src="obyom.jpg"></a>
+        <div class="img_right1"><a href="img/gruz.jpg"><img src="img/obyom.jpg"></a>
             <div class="img_content_right1">
                 <h2 class="text">Что на лапках?</h2>
                 <span class="text">Что образуется на задних лапках у шмелей?</span>
