--- a/08.2.html
+++ b/08.2.html
@@ -12,61 +12,61 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-3">
-				<img class="img" src="shmel62.jpg">
+				<img class="img" src="img/shmel62.jpg">
 				<div class="mark text">Рыжий</div>
 			</div>
 			<div class="col-lg-3">
-				<img class="img" src="shmel82.jpg">
+				<img class="img" src="img/shmel82.jpg">
 				<div class="mark text">Танк</div>
 			</div>
 			<div class="col-lg-3">
-				<img class="img" src="shmel52.jpg">
+				<img class="img" src="img/shmel52.jpg">
 				<div class="mark text">Красотка</div>
 			</div>
 			<div class="col-lg-3">
-				<img class="img" src="shmel92.jpg">
+				<img class="img" src="img/shmel92.jpg">
 				<div class="mark text">Обжора</div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-lg-4">
-				<img class="img" src="shmel10.jpg">
+				<img class="img" src="img/shmel10.jpg">
 				<div class="mark2 text">Громила</div>
 			</div>
 			<div class="col-lg-4">
-				<img class="img" src="shmel9.jpg">
+				<img class="img" src="img/shmel9.jpg">
 				<div class="mark2 text">Обжора</div>
 			</div>
 			<div class="col-lg-4">
-				<img class="img" src="shmel32.jpg">
+				<img class="img" src="img/shmel32.jpg">
 				<div class="mark2 text">Загребуха</div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-lg-6">
-				<img class="img" src="shmel12.jpg">
+				<img class="img" src="img/shmel12.jpg">
 				<div class="mark3 text">Феррари</div>
 			</div>
 			<div class="col-lg-6">
-				<img class="img" src="shmel13.jpg">
+				<img class="img" src="img/shmel13.jpg">
 				<div class="mark3 text">Молния</div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-lg-4">
-				<img class="img" src="shmel42.jpg">
+				<img class="img" src="img/shmel42.jpg">
 				<div class="mark4 text">Лохматый</div>
 			</div>
 			<div class="col-lg-2">
-				<img class="img" src="sirenevui11.jpg">
+				<img class="img" src="img/sirenevui11.jpg">
 				<div class="mark4 text">Задира</div>
 			</div>
 			<div class="col-lg-4">
-				<img class="img" src="shmel21.jpg">
+				<img class="img" src="img/shmel21.jpg">
 				<div class="mark4 text">Комета</div>
 			</div>
 			<div class="col-lg-2">
-				<img class="img" src="shmel11.jpg">
+				<img class="img" src="img/shmel11.jpg">
 				<div class="mark4 text">Тягач</div>
 			</div>
 		</div>
