--- a/hcernovic.html
+++ b/hcernovic.html
@@ -18,7 +18,7 @@ beefoto.jpg
  			<div class="img_right2"><a href="">foto2</a></div>
  		</div>
  		<div class="gallery3">
- 			<div class="img_left3"><a href="shmel22.jpg"><img src="shmel23.jpg"></a></div>
+ 			<div class="img_left3"><a href="img/shmel22.jpg"><img src="img/shmel23.jpg"></a></div>
  			<div class="img_center31"><a href="">foto2</a></div>
  			<div class="img_center32"><a href="">foto3</a></div>
  			<div class="img_right3"><a href="">foto4</a></div>
