--- a/raznoe.html
+++ b/raznoe.html
@@ -43,9 +43,9 @@
 		<div class="pnlBase">1</div>
 		<div class="pnlBase pnlZhyrny">2</div>
 		<div class="pnlBase">
-			<img src="shmel11.jpg">
+			<img src="img/shmel11.jpg">
 			<div class="pnlTitul">
-				<a href="shmel1.jpg" class="zagolovok">3</a>
+				<a href="img/shmel1.jpg" class="zagolovok">3</a>
 				<p class="lid">лорпл улпруклп рудкгшпрдушгп длоукрп дгурпд гуплурпдшг упшгунп уюолрулюоркуд плукдпгшнукшп нушпн укгп рдлугкпр угпр ушгкрпжщ укшп жукплоитлоуаржук нпжу пжщ п упжнужпгнуж п жущпг зущшэзи жрпдгурпшукп </p>
 			</div>
 		</div>
