--- a/01.html
+++ b/01.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <p><b><i>Welcome</i></b></p>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, <img src="index.jpg"/>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, <img src="img/index.jpg"/>
 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <p>welcome!</p>
 <p id="a1" title="якорь">Они шли полем в&nbsp;баню.</p>
@@ -46,10 +46,10 @@ sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad mi
 	hhh<em>lknhkjf</em>uyrtr
 </h1>
 
-<img src="index.jpg"/>
+<img src="img/index.jpg"/>
 
 <a href="#a1">
-	<img src="index.jpg" title="tttttt" />
+	<img src="img/index.jpg" title="tttttt" />
 </a>
 <a href="http://ya.ru" target="_blank">ya</a>
 
