--- a/02.html
+++ b/02.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h1>Новогодний гном своими руками</h1>
-	<img src="gnom.jpg">
+	<img src="img/gnom.jpg">
 	<p class="s1 s2" >Предлагаю сотворить немного волшебства. 
 	С гномами мы знакомы с детства из книг и мультфильмов. Их невероятное множество, с разными 
     колпачками, бородами, в разных одеждах и невообразимых башмачках.</p>
@@ -63,7 +63,7 @@
    С мехом для бороды работать сложно, но есть хитрости, которые облегчат работу. Варежки и сапожки
    или туфельки можно сделать съемными, но на это у вас уйдет еще как минимум пара часов работы и
    будет считаться высшим пилотажем!</p>
-   	<img src="gnom2.jpg"/>
+   	<img src="img/gnom2.jpg"/>
    <br/><a href="https://podelkisamodelki.ru/sdelat-gnoma-svoimi-rukami/">мастер-класс</a>
    <div class="s3 bg1 sticky">Дополнительная информация.</div>
 	</body>
