--- a/09.html
+++ b/09.html
@@ -9,16 +9,16 @@
 <div class="container">
     <header>
         <div class="figure">
-            <img src="shmelik1.jpg" alt="bamblebee">
+            <img src="img/shmelik1.jpg" alt="bamblebee">
         </div>
-              <div class="pnlMenu">
-                  <div class="menu">Главная</div>
-                  <div class="menu">О шмелях</div>
-                  <div class="menu">Место в истории</div>
-                  <div class="menu">Галерея</div>
-                  <div class="menu">Координаты</div>
-                  <div class="menu">Стать бжж</div>
-              </div>
+        <div class="pnlMenu">
+            <div class="menu">Главная</div>
+            <div class="menu">О шмелях</div>
+            <div class="menu">Место в истории</div>
+            <div class="menu">Галерея</div>
+            <div class="menu">Координаты</div>
+            <div class="menu">Стать бжж</div>
+        </div>
     </header>
     <main class="content">
         <div class="left_bar">
@@ -28,20 +28,23 @@
             <div class="nav"><a href="">Сбор нектара и урожайность растений</a></div>
             <div class="nav"><a href="">Грузоподъемность</a></div>
         </div>
-        <div class="pnlContent">
+        <div class="pnl_content">
             <div class="text">
                 <h1>Кто они, полосатые и пушистые насекомые</h1>
                 <p>Всего ученые насчитали более 300 видов шмелей. Появились они на Земле около 30 млн. лет назад!
                     Живут в северной части Евразии и Африки, в Северной Америке. Не так давно этих мохнатых насекомых
-                    завезли в Австралию и Новую Зеландию. Они прекрасно себя чувствуют и в горах, и в лесах, и в полях.</p>
-                <p><br/>Шмели — одни из самых холодостойких видов насекомых: они способны, быстро и часто сокращая мышцы груди,
+                    завезли в Австралию и Новую Зеландию. Они прекрасно себя чувствуют и в горах, и в лесах, и в
+                    полях.</p>
+                <p><br/>Шмели — одни из самых холодостойких видов насекомых: они способны, быстро и часто сокращая мышцы
+                    груди,
                     ускоренно разогреть своё тело до необходимых 40 °C. Это позволяет им вылетать рано утром и собирать
                     первый нектар, когда воздух ещё недостаточно прогрелся. К тому же быстрое повышение температуры тела
-                    даёт шмелям определённое конкурентное преимущество перед другими видами насекомых. Помогает шмелю греться
+                    даёт шмелям определённое конкурентное преимущество перед другими видами насекомых. Помогает шмелю
+                    греться
                     его «шерсть» — она уменьшает теплопотери в два раза.</p>
             </div>
             <div class="img">
-                <img src="shmel9.jpg" alt="bamblebee">
+                <img src="img/shmel9.jpg" alt="bamblebee">
                 <fieldset class="sign">Фото 1.</fieldset>
             </div>
             <div class="text">
@@ -49,10 +52,12 @@
                     красными или оранжевыми полосами, а некоторые виды окрашены в сплошной чёрный цвет. Предполагается,
                     что окрас шмелей связан с необходимостью баланса между мимикрией (маскировочной или предупреждающей)
                     и терморегуляцией.
-                    <br/>Из-за малой агрессивности шмелей они могут широко использоваться на садово-дачных участках. Существует
+                    <br/>Из-за малой агрессивности шмелей они могут широко использоваться на садово-дачных участках.
+                    Существует
                     даже отрасль такая под названием шмелеводство — разведение шмелей для опыления сельскохозяйственных
                     культур с целью повышения их урожайности.</p>
-                <p><br/>Время появления шмелей точно не известно. Самые ранние окаменелости рода Bombus датируются Олигоценом
+                <p><br/>Время появления шмелей точно не известно. Самые ранние окаменелости рода Bombus датируются
+                    Олигоценом
                     (38 – 26 млн лет), но время возникновения группы пока точно неизвестно. Окаменелость шмеля является
                     очень редкой находкой, поскольку попасть в смолу такому большому насекомому, чтобы полностью потом
                     быть окутанным ею и отвердеть в янтарь, очень сложно. Находки указывают на Азию, как место, где
@@ -66,9 +71,11 @@
             <div class="pnlNews">
                 <h3>Жужжовости</h3>
                 <ul class="news">
-                    <li><a href="">Полеты временно приостановленны. Прогноз не утешителен на следующие двое суток!</a></li>
+                    <li><a href="">Полеты временно приостановленны. Прогноз не утешителен на следующие двое суток!</a>
+                    </li>
                     <li><a href="">Очередной рекорд дня поставил Ветролет, опередив Тягача.</a></li>
-                    <li><a href="">Будьте внимательны и остороржны! Через два дня стартует сезон человеков, созрела малина.</a></li>
+                    <li><a href="">Будьте внимательны и остороржны! Через два дня стартует сезон человеков, созрела
+                        малина.</a></li>
                 </ul>
             </div>
             <div class="hbday">
@@ -77,14 +84,15 @@
         </div>
     </main>
     <footer class="pnlFooter">
-       <div class="txtAddr">
-           <div class="txt">
-               <a href="">Главная</a> <a href="">О шмелях</a> <a href="">Место в истории</a> <a href="">Галерея</a> <a href="">Координа</a>
-           </div>
-           <div class="txt">
-               <address class="">55°45′07″ с. ш. 37°36′56″ в. д</address>
-           </div>
-       </div>
+        <div class="txtAddr">
+            <div class="txt">
+                <a href="">Главная</a> <a href="">О шмелях</a> <a href="">Место в истории</a> <a href="">Галерея</a> <a
+                    href="">Координа</a>
+            </div>
+            <div class="txt">
+                <address class="">55°45′07″ с. ш. 37°36′56″ в. д</address>
+            </div>
+        </div>
     </footer>
 </div>
 </body>
