--- a/09.html
+++ b/09.html
@@ -12,42 +12,63 @@
             <img src="img/shmelik1.jpg" alt="bamblebee">
         </div>
         <div class="pnlMenu">
-            <div class="menu">Главная</div>
-            <div class="menu">О шмелях</div>
-            <div class="menu">Место в истории</div>
-            <div class="menu">Галерея</div>
-            <div class="menu">Координаты</div>
-            <div class="menu">Стать бжж</div>
+            <div class="menu"><a href="">Главная</a></div>
+            <div class="menu"><a href="">О шмелях</a></div>
+            <div class="menu"><a href="">Место в истории</a></div>
+            <div class="menu"><a href="">Галерея</a></div>
+            <div class="menu"><a href="">Координаты</a></div>
+            <div class="menu"><a href="">Стать бжж</a></div>
         </div>
     </header>
     <main class="content">
         <div class="left_bar">
-            <h3>Интересно знать!</h3>
-            <div class="nav"><a href="">Летучесть</a></div>
-            <div class="nav"><a href="">Навигационная система</a></div>
-            <div class="nav"><a href="">Сбор нектара и урожайность растений</a></div>
-            <div class="nav"><a href="">Грузоподъемность</a></div>
+            <h3>Интересно жжнать!</h3>
+            <ul class="nav">
+                <li><a href="">Летучесть</a></li>
+                <li><a href="">Навигационная система</a></li>
+                <li><a href="">Сбор нектара и урожайность растений</a></li>
+                <li><a href="">Грузоподъемность</a></li>
+            </ul>
+        </div>
+        <div class="hbday">
+            <h3>Пожждравляем!</h3>
+            <p class="hday">Соседняя колония, что за ромашковыми клумбами чуть южнее рябин, принимает поздравления в связи с пополнением!</p>
         </div>
         <div class="pnl_content">
             <div class="text">
-                <h1>Кто они, полосатые и пушистые насекомые</h1>
+                <h1>Кто они, полосатые и пушистые насекомые</h1><br/>
                 <p>Всего ученые насчитали более 300 видов шмелей. Появились они на Земле около 30 млн. лет назад!
                     Живут в северной части Евразии и Африки, в Северной Америке. Не так давно этих мохнатых насекомых
                     завезли в Австралию и Новую Зеландию. Они прекрасно себя чувствуют и в горах, и в лесах, и в
                     полях.</p>
-                <p><br/>Шмели — одни из самых холодостойких видов насекомых: они способны, быстро и часто сокращая мышцы
-                    груди,
-                    ускоренно разогреть своё тело до необходимых 40 °C. Это позволяет им вылетать рано утром и собирать
+                <br/>
+                <p>Шмели — одни из самых холодостойких видов насекомых: они способны, быстро и часто сокращая мышцы
+                    груди, ускоренно разогреть своё тело до необходимых 40 °C. Это позволяет им вылетать рано утром и собирать
                     первый нектар, когда воздух ещё недостаточно прогрелся. К тому же быстрое повышение температуры тела
                     даёт шмелям определённое конкурентное преимущество перед другими видами насекомых. Помогает шмелю
-                    греться
-                    его «шерсть» — она уменьшает теплопотери в два раза.</p>
+                    греться его «шерсть» — она уменьшает теплопотери в два раза.</p>
+                <img class="img" src="img/shmel9.jpg" alt="bamblebee">
+                <fieldset class="sign">Фото 1.</fieldset><br/>
+                <br/><p>Окраска шмелей, как правило, жёлто-чёрная, часто в полоску. Кроме того, встречаются виды шмелей с
+                    красными или оранжевыми полосами, а некоторые виды окрашены в сплошной чёрный цвет. Предполагается,
+                    что окрас шмелей связан с необходимостью баланса между мимикрией (маскировочной или предупреждающей)
+                    и терморегуляцией.</p>
+                    <br/>
+                 <p>Из-за малой агрессивности шмели могут широко использоваться на садово-дачных участках.
+                    Существует даже отрасль такая под названием <i>шмелеводство</i> — разведение шмелей для опыления сельскохозяйственных
+                    культур с целью повышения их урожайности.</p>
+                <br/>
+                <p>Время появления шмелей точно не известно. Самые ранние окаменелости рода Bombus датируются
+                    Олигоценом (38 – 26 млн лет), но время возникновения группы пока точно неизвестно. Окаменелость шмеля является
+                    очень редкой находкой, поскольку попасть в смолу такому большому насекомому, чтобы полностью потом
+                    быть окутанным ею и отвердеть в янтарь, очень сложно. Находки указывают на Азию, как место, где
+                    впервые появились шмели. До сих пор в этой части света обитает наибольшее разнообразие шмелей.</p>
             </div>
-            <div class="img">
+            <!--<div class="img">
                 <img src="img/shmel9.jpg" alt="bamblebee">
                 <fieldset class="sign">Фото 1.</fieldset>
-            </div>
-            <div class="text">
+            </div>-->
+            <!--<div class="text">
                 <p>Окраска шмелей, как правило, жёлто-чёрная, часто в полоску. Кроме того, встречаются виды шмелей с
                     красными или оранжевыми полосами, а некоторые виды окрашены в сплошной чёрный цвет. Предполагается,
                     что окрас шмелей связан с необходимостью баланса между мимикрией (маскировочной или предупреждающей)
@@ -62,12 +83,9 @@
                     очень редкой находкой, поскольку попасть в смолу такому большому насекомому, чтобы полностью потом
                     быть окутанным ею и отвердеть в янтарь, очень сложно. Находки указывают на Азию, как место, где
                     впервые появились шмели. До сих пор в этой части света обитает наибольшее разнообразие шмелей.</p>
-            </div>
+            </div>-->
         </div>
         <div class="right_bar">
-            <!--<div class="base pnlButton">
-                <button class="button">Стать бжж</button>
-            </div>-->
             <div class="pnlNews">
                 <h3>Жужжовости</h3>
                 <ul class="news">
@@ -78,8 +96,16 @@
                         малина.</a></li>
                 </ul>
             </div>
-            <div class="hbday">
-                <p/><b>Поздравляем</b> с пополнением соседнюю кололнию, что за ромашковыми клумбами чуть южнее рябин!
+            <div class="go">
+                <h3>Передовики квартала</h3>
+                <ul>
+                    <li><a href="">Вертолет</a></li>
+                    <li><a href="">Тягач</a></li>
+                    <li><a href="">Обжора</a></li>
+                    <li><a href="">Молния</a></li>
+                    <li><a href="">Комета</a></li>
+                    <li><a href="">Болтушка</a></li>
+                </ul>
             </div>
         </div>
     </main>
@@ -87,10 +113,9 @@
         <div class="txtAddr">
             <div class="txt">
                 <a href="">Главная</a> <a href="">О шмелях</a> <a href="">Место в истории</a> <a href="">Галерея</a> <a
-                    href="">Координа</a>
-            </div>
-            <div class="txt">
-                <address class="">55°45′07″ с. ш. 37°36′56″ в. д</address>
+                    href="">Координаты</a>
+                <address class="">55°45′07″ с. ш. 37°36′56″ в. д. e-mail:bblbee@shmel.vzhuh</address>
+                <p><a href="">Bumblebees</a></p>
             </div>
         </div>
     </footer>
