--- a/08.html
+++ b/08.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<title>Bumblebee</title>
@@ -39,7 +39,7 @@
 	</div>
 	<div class="img">
 		<h3 class="img">Фото дня</h3>
-		<img class="foto" src="img/beefoto.jpg">
+		<img class="foto" src="img/beefoto.jpg" alt="beefoto.jpg">
 	</div>	
 	<div class="welcome">
 		<h3 class="welcome">Реклама</h3>
@@ -48,7 +48,7 @@
 	</div>
     </div>
     <div class="right_bar">
-		<div><img class="img_members" src="img/gruz0.jpg"/></div>
+		<div><img class="img_members" src="img/gruz0.jpg" alt="gruz0.jpg"/></div>
 	 <div class="members">       
 	    	<h2>Наши передовики:</h2>
 	    	<ol>
@@ -76,7 +76,7 @@
 	</div>
     </div>
 	<div class="text">
-		<img class="img_sirenevui1" src="img/sirenevui1.jpg"/>
+		<img class="img_sirenevui1" src="img/sirenevui1.jpg" alt="bambleebee"/>
 		<p>Всего ученые насчитали более 300 видов шмелей. Появились они на Земле около 30 млн. лет назад!
 		Живут в северной части Евразии и Африки, в Северной Америке. Не так давно этих мохнатых насекомых 
 	    завезли в Австралию и Новую Зеландию. Они прекрасно себя чувствуют и в горах, и в лесах, и в полях.</p>
@@ -90,7 +90,7 @@
 	    шмелей с красными или оранжевыми полосами, а некоторые виды окрашены в сплошной чёрный цвет. 
 	    Предполагается, что окрас шмелей связан с необходимостью баланса между мимикрией (маскировочной 
 	    или предупреждающей) и терморегуляцией.</p>
-	    <img class="img_belui1" src="img/belui1.jpg"/>
+	    <img class="img_belui1" src="img/belui1.jpg" alt="belui1.jpg"/>
 	    <br><p>Из-за малой агрессивности шмелей они могут широко использоваться на садово-дачных участках. 
 	    Существует даже отрасль такая под названием шмелеводство — разведение шмелей для опыления 
 	    сельскохозяйственных культур с целью повышения их урожайности.</p>
@@ -111,8 +111,7 @@
 		<p>Главная | <a href="">О шмелях</a> | <a href="">Летучесть</a>
 		| <a href="">Навигация</a> | <a href="">Урожайность</a> | <a href="">Грузоподъемность</a> 
 		| <a href="">Стать бжж</a></p>
-		<p>&#174 BEE.RU, 2020 | All right reserved | e-mail:<a href=
-			"mailto:bumblebee@bee.ru"></a></p>  
+		<p>&#174 BEE.RU, 2020 | All right reserved | e-mail:<a href="mailto:bumblebee@bee.ru"></a></p>
 	</div>
 </div>
 </body>
