--- a/index.html
+++ b/index.html
@@ -13,5 +13,11 @@
    <a href="08.1.html">08.1.html</a>
    <a href="08.2.html">08.2.html</a>
    <a href="09.html">09.html</a>
+   <a href="js10.0.html">js10.0.html</a>
+   <a href="js10.1.html">js10.1.html</a>
+   <a href="js10.2.html">js10.2.html</a>
+   <a href="js10.3.html">js10.3.html</a>
+   <a href="js10.4.html">js10.4.html</a>
+   <a href="js10.5.html">js10.5.html</a>
 </body>
 </html>
