--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 	<meta charset="utf-8">
+   <style>
+      a{display: block;}
+   </style>
 </head>
 <body>
    <a href="00.html">00.html</a>
@@ -19,5 +22,13 @@
    <a href="js10.3.html">js10.3.html</a>
    <a href="js10.4.html">js10.4.html</a>
    <a href="js10.5.html">js10.5.html</a>
+   <a href="js10.6.html">js10.6.html</a>
+   <a href="js10.7.html">js10.7.html</a>
+   <a href="js10.8.html">js10.8.html</a>
+   <a href="js10.9.html">js10.9.html</a>
+   <a href="10.10.html">10.10.html</a>
+   <a href="js11.html">js11.html</a>
+   <a href="js11.1.html">js11.1.html</a>
+   <a href="js12.html">js12.html jQuery UI</a>
 </body>
 </html>
