--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
    <a href="10.10.html">10.10.html</a>
    <a href="js11.html">js11.html</a>
    <a href="js11.1.html">js11.1.html</a>
-   <a href="js12.html">js12.html jQuery UI</a>
+   <a href="jq12.0.html">jq12.0.html jQuery UI</a>
+   <a href="jq12.1.html">jq12.1.html jQuery UI</a>
+   <a href="jq12.2.html">jq12.2.html jQuery UI</a>
+   <a href="ng.html">Nano gallery</a>
+   <a href="jq12.3.html">jq12.3.html Gallery</a>
+   <a href="jq12.4.html">jq12.4.html Gallery</a>
 </body>
 </html>
