--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
    <a href="ng.html">Nano gallery</a>
    <a href="jq12.3.html">jq12.3.html Gallery</a>
    <a href="jq12.4.html">jq12.4.html Gallery</a>
+   <a href="jq12.5.html">jq12.5.html JS</a>
 </body>
 </html>
