--- a/jq12.4.html
+++ b/jq12.4.html
@@ -126,7 +126,7 @@
                 minimized: 'label' },
             viewerTools:    {
                 topLeft:   '',
-                topRight:  'rotateLeft, rotateRight, fullscreenButton, closeButton'
+                topRight:  'shareButton, rotateLeft, rotateRight, fullscreenButton, closeButton'
             },
 
             // DEEP LINKING
