--- a/jq12.3.html
+++ b/jq12.3.html
@@ -6,21 +6,30 @@
     <script src="js/jquery-3.5.1.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/nanogallery2.min.css">
     <script src="js/jquery.nanogallery2.min.js"></script>
+    <!--<script src="https://yastatic.net/share2/share.js"></script>-->
 </head>
 <body>
-<h1>Московское</h1>
+<div>
+    <h1>Московское</h1>
+    <!--<div class="ya-share2" data-services="vkontakte,facebook,twitter,evernote,viber,whatsapp,telegram" data-image=""></div>-->
+</div>
 <div id="nanogallery2" data-nanogallery2="{
-   'itemBaseURL':
+   /*'itemBaseURL':*/
    'thumbnailWidth': '200',
    'thumbnailHeight':  'auto',
   'thumbnailLabel': {
          'position': 'overImageOnBottom'},
   'thumbnailAlignment': 'center',
-  'thumbnailOpenImage': 'true'
+  'thumbnailOpenImage': 'true',
+  'viewerToolbar': { display: false },
+          'viewerTools': {
+            'topLeft':   'label',
+            'topRight':  'shareButton'
+          },
 }">
     <a href="img/gallery/moskow1.jpg" data-ng2thumb="img/gallery/moskow1_tn.jpg" data-ng2desc=""></a>
     <a href="img/gallery/moskow2.jpg" data-ng2thumb="img/gallery/moskow2_tn.jpg" data-ng2desc=""></a>
-    <a href="img/gallery/moskow3.jpg" data-ng2thumb="img/gallery/moskow3_tn.jpg" data-ng2desc=""></a>
+    <a href="img/gallery/moskow3.jpg" data-ng2thub="img/gallery/moskow3_tn.jpg" data-ng2desc=""></a>
     <a href="img/gallery/moskow4.jpg" data-ng2thumb="img/gallery/moskow4_tn.jpg" data-ng2desc=""></a>
     <a href="img/gallery/moskow5.jpg" data-ng2thumb="img/gallery/moskow5_tn.jpg" data-ng2desc=""></a>
     <a href="img/gallery/moskow6.jpg" data-ng2thumb="img/gallery/moskow6_tn.jpg" data-ng2desc=""></a>
