--- a/07.html
+++ b/07.html
@@ -8,9 +8,38 @@
 <body>
 <div class="conteiner">
 	<div class="top">шапка разиновая = ширине контейнера и 75% от ширины экрана</div>
-	<div class="left_b">левая колонка шириной 160 пикс</div>
-	<div class="main">центральная колонка резиновая зависит от оставшегося свободного места экрана</div>
-	<div class="right_b">правая колонка шириной 160 пикс</div>
+	<div class="left_b">
+		bkv;reg'jrhrt
+		hgn
+		tryjrs
+		ytryj6r5t
+		6tj6r5tjr5y
+		6yuor7y8l7liuiliuolio0
+		\iurf7y7y7y7y7y7y7y	bkv;reg'jrhrt
+		hgn
+		tryjrs
+		ytryj6r5t
+		6tj6r5tjr5y
+		6yuor7y8l7liuiliuolio0
+		\iurf7y7y7y7y7y7y7y
+		<div class="mainL">проверка ширины блока</div>
+	</div>
+	<div class="main">
+		nkfjbpraktg bljart\p'aejkh;EKW] lfkjyprwt r;thojrpth er;hokirt[ ER;GIKE
+		ontuhjpek qr]erpgkiihjgthikpet
+		]	PRJMHRPLTOJHRPHIKR[THP; qr]erpgkiihjgthikpet RT[H qr]erpgkiihjgthikpet
+		<div class="mainC">проверка ширины блока</div>
+	</div>
+	<div class="right_b">
+		bkv;reg'jrhrt
+		hgn
+		tryjrs
+		ytryj6r5t
+		6tj6r5tjr5y
+		6yuor7y8l7liuiliuolio0
+		\iurf7y7y7y7y7y7y7y
+		<div class="mainR">проверка ширины блока</div>
+	</div>
 	<div class="footer">подвал резиновый = ширине контейнера и 75% от ширины экрана</div>
 </div>
 </body>
