--- a/08.html
+++ b/08.html
@@ -100,11 +100,11 @@
 	    не нарушает физических законов. Для этого потребовалось много часов моделирования на суперкомпьютере 
 	    сложного движения воздуха вокруг быстро движущихся крыльев. Ван отмечает, что старый миф о шмеле — просто 
 	    ледствие плохого понимания авиаинженерами нестационарной вязкой газовой динамики.</p>
-	    <p>Время появления шмелей точно не известно. Самые ранние окаменелости рода Bombus датируются 
+	    <!--<p>Время появления шмелей точно не известно. Самые ранние окаменелости рода Bombus датируются
 	    Олигоценом (38 – 26 млн лет), но время возникновения группы пока точно неизвестно. Окаменелость шмеля 
 	    является очень редкой находкой, поскольку попасть в смолу такому большому насекомому, чтобы полностью потом 
 	    быть окутанным ею и отвердеть в янтарь, очень сложно. Находки указывают на Азию, как место, где впервые 
-	    появились шмели. До сих пор в этой части света обитает наибольшее разнообразие шмелей.</p>
+	    появились шмели. До сих пор в этой части света обитает наибольшее разнообразие шмелей.</p>-->
 	</div> 
 	
   	<div class="footer">
