--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
    <a href="js10.2.html">js10.2.html</a>
    <a href="js10.3.html">js10.3.html</a>
    <a href="js10.4.html">js10.4.html</a>
-   <a href="js10.5.html">js10.5.html</a>
+   <a href="js10.5.html">js10.5greed.html</a>
    <a href="js10.6.html">js10.6.html</a>
    <a href="js10.7.html">js10.7.html</a>
    <a href="js10.8.html">js10.8.html</a>
@@ -36,5 +36,8 @@
    <a href="jq12.3.html">jq12.3.html Gallery</a>
    <a href="jq12.4.html">jq12.4.html Gallery</a>
    <a href="jq12.5.html">jq12.5.html JS</a>
+   <a href="pg1.html">pg1.html PG1</a>
+   <a href="js12.6.html">js12.6.событие</a>
+   <a href="flxb13.html">Flexbox</a>
 </body>
 </html>
