--- a/09.html
+++ b/09.html
@@ -9,15 +9,31 @@
 <div class="container">
     <header>
         <div class="figure">
-            <img src="img/shmelik1.jpg" alt="bamblebee">
+            <img src="img/shmelik16a1.jpg" alt="bamblebee">
         </div>
         <div class="pnlMenu">
-            <div class="menu"><a href="">Главная</a></div>
-            <div class="menu"><a href="">О шмелях</a></div>
-            <div class="menu"><a href="">Место в истории</a></div>
-            <div class="menu"><a href="">Галерея</a></div>
-            <div class="menu"><a href="">Координаты</a></div>
-            <div class="menu"><a href="">Стать бжж</a></div>
+            <ul>
+                <li class="menu"><a href="">Главная</a></li>
+                <li class="menu"><a href="">О шмелях</a>
+                    <ul>
+                        <li><a href="">Виды</a></li>
+                        <li><a href="">Ареал обитания</a></li>
+                        <li><a href="">Строение и физиология</a></li>
+                    </ul>
+                </li>
+                <li class="menu"><a href="">Место в истории</a></li>
+                <li class="menu"><a href="">Галерея</a>
+                    <ul>
+                        <li><a href="">Евразия</a></li>
+                        <li><a href="">Северная Америка</a></li>
+                        <li><a href="">Южная Америка</a></li>
+                        <li><a href="">Севереная Африка</a></li>
+                        <li><a href="">Другие территории</a></li>
+                    </ul>
+                </li>
+                <li class="menu"><a href="">Координаты</a></li>
+                <li class="menu"><a href="">Стать бжж</a></li>
+            </ul>
         </div>
     </header>
     <main class="content">
@@ -32,7 +48,8 @@
         </div>
         <div class="hbday">
             <h3>Пожждравляем!</h3>
-            <p class="hday">Соседняя колония, что за ромашковыми клумбами чуть южнее рябин, принимает поздравления в связи с пополнением!</p>
+            <p class="hday">Соседняя колония, что за ромашковыми клумбами чуть южнее рябин, принимает поздравления в
+                связи с пополнением!</p>
         </div>
         <div class="pnl_content">
             <div class="text">
@@ -43,47 +60,33 @@
                     полях.</p>
                 <br/>
                 <p>Шмели — одни из самых холодостойких видов насекомых: они способны, быстро и часто сокращая мышцы
-                    груди, ускоренно разогреть своё тело до необходимых 40 °C. Это позволяет им вылетать рано утром и собирать
+                    груди, ускоренно разогреть своё тело до необходимых 40 °C. Это позволяет им вылетать рано утром и
+                    собирать
                     первый нектар, когда воздух ещё недостаточно прогрелся. К тому же быстрое повышение температуры тела
                     даёт шмелям определённое конкурентное преимущество перед другими видами насекомых. Помогает шмелю
                     греться его «шерсть» — она уменьшает теплопотери в два раза.</p>
                 <img class="img" src="img/shmel9.jpg" alt="bamblebee">
-                <fieldset class="sign">Фото 1.</fieldset><br/>
-                <br/><p>Окраска шмелей, как правило, жёлто-чёрная, часто в полоску. Кроме того, встречаются виды шмелей с
+                <fieldset class="sign">Фото 1.</fieldset>
+                <br/>
+                <br/>
+                <p>Окраска шмелей, как правило, жёлто-чёрная, часто в полоску. Кроме того, встречаются виды шмелей с
                     красными или оранжевыми полосами, а некоторые виды окрашены в сплошной чёрный цвет. Предполагается,
                     что окрас шмелей связан с необходимостью баланса между мимикрией (маскировочной или предупреждающей)
                     и терморегуляцией.</p>
-                    <br/>
-                 <p>Из-за малой агрессивности шмели могут широко использоваться на садово-дачных участках.
-                    Существует даже отрасль такая под названием <i>шмелеводство</i> — разведение шмелей для опыления сельскохозяйственных
+                <br/>
+                <p>Из-за малой агрессивности шмели могут широко использоваться на садово-дачных участках.
+                    Существует даже отрасль такая под названием <i>шмелеводство</i> — разведение шмелей для опыления
+                    сельскохозяйственных
                     культур с целью повышения их урожайности.</p>
                 <br/>
                 <p>Время появления шмелей точно не известно. Самые ранние окаменелости рода Bombus датируются
-                    Олигоценом (38 – 26 млн лет), но время возникновения группы пока точно неизвестно. Окаменелость шмеля является
+                    Олигоценом (38 – 26 млн лет), но время возникновения группы пока точно неизвестно. Окаменелость
+                    шмеля является
                     очень редкой находкой, поскольку попасть в смолу такому большому насекомому, чтобы полностью потом
                     быть окутанным ею и отвердеть в янтарь, очень сложно. Находки указывают на Азию, как место, где
                     впервые появились шмели. До сих пор в этой части света обитает наибольшее разнообразие шмелей.</p>
             </div>
-            <!--<div class="img">
-                <img src="img/shmel9.jpg" alt="bamblebee">
-                <fieldset class="sign">Фото 1.</fieldset>
-            </div>-->
-            <!--<div class="text">
-                <p>Окраска шмелей, как правило, жёлто-чёрная, часто в полоску. Кроме того, встречаются виды шмелей с
-                    красными или оранжевыми полосами, а некоторые виды окрашены в сплошной чёрный цвет. Предполагается,
-                    что окрас шмелей связан с необходимостью баланса между мимикрией (маскировочной или предупреждающей)
-                    и терморегуляцией.
-                    <br/>Из-за малой агрессивности шмелей они могут широко использоваться на садово-дачных участках.
-                    Существует
-                    даже отрасль такая под названием шмелеводство — разведение шмелей для опыления сельскохозяйственных
-                    культур с целью повышения их урожайности.</p>
-                <p><br/>Время появления шмелей точно не известно. Самые ранние окаменелости рода Bombus датируются
-                    Олигоценом
-                    (38 – 26 млн лет), но время возникновения группы пока точно неизвестно. Окаменелость шмеля является
-                    очень редкой находкой, поскольку попасть в смолу такому большому насекомому, чтобы полностью потом
-                    быть окутанным ею и отвердеть в янтарь, очень сложно. Находки указывают на Азию, как место, где
-                    впервые появились шмели. До сих пор в этой части света обитает наибольшее разнообразие шмелей.</p>
-            </div>-->
+
         </div>
         <div class="right_bar">
             <div class="pnlNews">
@@ -92,7 +95,7 @@
                     <li><a href="">Полеты временно приостановленны. Прогноз не утешителен на следующие двое суток!</a>
                     </li>
                     <li><a href="">Очередной рекорд дня поставил Ветролет, опередив Тягача.</a></li>
-                    <li><a href="">Будьте внимательны и остороржны! Через два дня стартует сезон человеков, созрела
+                    <li><a href="">Будьте внимательны и осторожны! Через два дня стартует сезон человеков, созрела
                         малина.</a></li>
                 </ul>
             </div>
