--- a/js10.5.html
+++ b/js10.5.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>js10.5greed</title>
     <link rel="stylesheet" type="text/css" href="css/js10.5.css">
     <script src="js/jquery-3.5.1.min.js"></script>
 </head>
