--- a/js11.html
+++ b/js11.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="js/jquery-3.5.1.min.js"></script>
+    <style>
+        .pg{}
+        .pgItem{
+            float: left;
+            display: block;
+            width: 100px;
+            height: 100px;
+            background: red;
+            color: yellow;
+            margin-right: 10px;
+        }
+    </style>
 </head>
 <body>
+
+<div style="pg">
+    <a class="pgItem" href="/messages?pgNumber=0">1</a>
+    <a class="pgItem" href="/messages?pgNumber=1">2</a>
+    <a class="pgItem" href="/messages?pgNumber=2">3</a>
+    <div style="clear: both;"></div>
+</div>
+
 
 <div id="pnlRase"></div>
 
